Computational methods in medical physics/.metadata/.plugins/org.eclipse.cdt.ui/Test.build.log
20:14:09 **** Build of configuration Debug for project Test ****
make all 
Building file: ../test.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test.d" -MT"test.o" -o "test.o" "../test.cpp"
../test.cpp: In function ‘int main()’:
../test.cpp:4:2: error: ‘cou’ is not a member of ‘std’
  std::cou << "Test";
  ^~~
subdir.mk:18: recipe for target 'test.o' failed
make: *** [test.o] Error 1

20:14:09 Build Finished (took 739ms)

